<resources>
    <string name="app_name">Formulario</string>
    <string name="nombre">Nombre completo</string>
    <string name="fecha">Fecha de Nacimiento</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="direccion">Dirección</string>
    <string name="siguiente">Siguiente</string>
    <string name="editar">Editar Datos</string>
</resources>
