<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16sp"
    android:paddingLeft="16sp"
    android:paddingBottom="16sp"
    android:paddingRight="16sp"
    android:orientation="vertical"
    tools:context="com.example.gerardomd.formulario.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText

                    android:id="@+id/nombre2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre"
                    android:inputType="text"
                    />

            </android.support.design.widget.TextInputLayout>

            <com.example.gerardomd.formulario.CustomDatePicker
                android:id="@+id/fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></com.example.gerardomd.formulario.CustomDatePicker>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/telefono2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefono"
                    android:inputType="text"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="text"
                    />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/direccion2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/direccion"
                    android:inputType="text"
                    />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/siguiente"
                android:theme="@style/MiBoton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/siguiente"
                />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
